Update CSS - will return to refactor for different screen sizes, need to fix overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #5f9bb7;
 }
+
+html {
+  scroll-behavior: smooth;
+}
