--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,7 +1,6 @@
 .projects {
   display: grid;
   height: 100vh;
-  /* border: 2px solid greenyellow; */
   text-align: center;
   justify-content: center;
   padding-top: 10vmax;
@@ -9,42 +8,48 @@
 
 .projects > h2 {
   text-decoration: underline;
-  font-size: xx-large;
+  font-size: xxx-large;
 }
 
 .project-list {
   height: 40vh;
   margin-left: 10vmax;
   margin-right: 10vmax;
-  /* padding-top: 5vmax; */
   justify-content: space-around;
   display: flex;
-  /* border: 2px solid red; */
 }
 
 .project-card {
   width: 30vw;
-  height: 30vh;
+  height: 45vh;
   margin-left: 25px;
   margin-right: 25px;
-  border: 3px solid #ed8a34;
-  padding: 2rem;
+  border: 4px solid #d9b694;
+  background-color: #346981;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 0.5rem;
-  color: #102f45;
+}
+
+.project-card > img {
+  width: 20vw;
+  height: 25vh;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-bottom: 5px;;
 }
 
 .project-card > h1 {
-  font-size: x-large;
+  font-size: xx-large;
   font-weight: 900;
 }
 
 .projects > h3 {
+  margin-top: 5px;
   font-style: italic;
 }
 
 .projects > h3 > a {
-  color: #e08f48;
+  color: #ed8a34;
 }
