--- a/src/pages/skills.css
+++ b/src/pages/skills.css
@@ -4,15 +4,18 @@
 
 .skills-container > h1 {
   text-align: center;
-  font-size: large;
+  font-weight: 900;
+  font-size: xx-large;
+  text-decoration: underline;
 }
+
 .img-container {
+  margin-top:2vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-column-gap: 1vw;
   grid-row-gap: 5vh;
-  border: 2px solid red;
 }
 
 .img-container > img {
@@ -20,6 +23,7 @@
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #102f45;
-  border: 2px solid orange;
+  background-color: #346981;
+  border: 8px solid #d9b694;
+  border-radius: 20px;
 }
